pandora_console/include/styles/pandora.css
/* ... */
.DejaVuSerifCondensed {
  font-family: DejaVuSerifCondensedFont, sans-serif;
}

@font-face {
  font-family: "FreeSansFont";
  src: url("../fonts/FreeSans.ttf") format("truetype");
}

.FreeSans {
  font-family: FreeSansFont, sans-serif;
}

@font-face {
  font-family: "FreeSansBoldFont";
  src: url("../fonts/FreeSans-Bold.ttf") format("truetype");
}

.FreeSansBold {
  font-family: FreeSansBoldFont, sans-serif;
}

@font-face {
  font-family: "smallfontFont";
  src: url("../fonts/smallfont.ttf") format("truetype");
}

.smallfont {
  font-family: smallfontFont, sans-serif;
}

@font-face {
  font-family: "unicodeFont";
  src: url("../fonts/unicode.ttf") format("truetype");
}

@font-face {
  font-family: "roboto";
  src: url("../../fonts/roboto.woff2") format("woff2");
}

@font-face {
  font-family: "opensans";
  src: url("../../fonts/opensans.woff2") format("woff2");
}

@font-face {
  font-family: "lato";
  src: url("../../fonts/lato.woff2") format("woff2");
}

@font-face {
  font-family: "leaguegothic";
  src: url("../../fonts/leaguegothic.woff") format("woff");
}
.unicode {
  font-family: unicodeFont, sans-serif;
}

/*
 * ---------------------------------------------------------------------
 * - GLOBAL STYLES                           									-
 * ---------------------------------------------------------------------
 */
.truncate {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}
.truncate:hover {
  white-space: pre-wrap;
}
.w120px {
  width: 120px;
  max-width: 120px;
}
.mw120px {
  min-width: 120px;
}
.mw180px {
  min-width: 180px;
}
.mw250px {
  min-width: 250px;
}
.mw500px {
  min-width: 500px;
}
.mw600px {
  min-width: 600px;
}
.mw800px {
  min-width: 800px;
}
.w20px {
  width: 20px;
}
.w10p {
  width: 10%;
}
.w20p {
  width: 20%;
}
.w30p {
  width: 30%;
}
.w40p {
  width: 40%;
}
.w50p {
  width: 50%;
}
.w60p {
  width: 60%;
}
.w70p {
  width: 70%;
}
.w80p {
  width: 80%;
}
.w90p {
  width: 90%;
}
.w100p {
  width: 100%;
}

.h10p {
  height: 10%;
}

.h20p {
  height: 20%;
}

.h30p {
  height: 30%;
}

.h40p {
  height: 40%;
}

.h50p {
  height: 50%;
}

.h80p {
  height: 80%;
}

.h100p {
  height: 100%;
}
.no-text-imp {
  font-size: 0 !important;
}
.noselect {
  -webkit-touch-callout: none; /* iOS Safari */
  -webkit-user-select: none; /* Safari */
  -khtml-user-select: none; /* Konqueror HTML */
  -moz-user-select: none; /* Old versions of Firefox */
  -ms-user-select: none; /* Internet Explorer/Edge */
  user-select: none; /* Non-prefixed version, currently supported by Chrome, Opera and Firefox */
}
.flex-content-right {
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  justify-content: flex-end;
  align-content: flex-end;
}
.flex-column {
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  justify-content: space-between;
  align-content: center;
}

.flex-row {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-between;
  align-content: center;
}
.flex-row-baseline {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  align-items: baseline;
}

.flex-row-vcenter {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  align-items: center;
}

.flex-space-around {
  justify-content: space-around;
}

.flex-end {
  justify-content: flex-end;
}

.flex-start {
  justify-content: flex-start;
}

.nowrap {
  flex-wrap: nowrap;
}

.padding-2 {
  padding: 2em;
}
.padding-4 {
  padding: 4em;
}
.padding-6 {
  padding: 6em;
}
.margin-right-1 {
  margin-right: 1em;
}
.margin-left-1 {
  margin-left: 1em;
}
.margin-right-2 {
  margin-right: 2em;
}
.margin-left-2 {
  margin-left: 2em;
}
.no-border {
  border: none;
}
.no-border-imp,
.no-border-imp > div {
  border: none !important;
}
.no-padding {
  padding: 0;
}
.no-padding-imp {
  padding: 0 !important;
}
.no-margin {
  margin: 0;
}
.box-shadow {
  box-shadow: 0px 0px 15px -4px #dadada;
}
.align-top td {
  vertical-align: top;
}
.no-td-borders td {
  border: none;
}
.no-td-padding td {
  padding: 0;
}
.td-bg-white td {
  background: #fff;
}
.float-left {
  float: left;
}
.float-right {
  float: right;
}
.invisible {
  display: none;
}

div#page {
  background: #fbfbfb;
  background-image: none;
  clear: both;
  width: auto;
  padding-top: 5px;
  padding-right: 6em;
  display: flex;
  flex-direction: column;
}

body.pure {
  background-color: #fff;
}

div#container {
  margin: 0 auto;
  min-width: 960px;
  text-align: left;
  height: 100%;
  background: #fff;
  width: 100%;
}

div#main {
  width: 100%;
  margin: 0 auto;
  margin-left: 3em;
  position: relative;
  min-height: 850px;
}

textarea.conf_editor {
  padding: 5px;
  width: 650px;
  height: 350px;
}

textarea.conf_error {
  background-image: url(../../images/err.png);
  background-repeat: no-repeat;
  background-position: top right;
}

a.white_bold {
  color: #eee;
  text-decoration: none;
  font-weight: bold;
}

a.white {
  color: #eee;
  text-decoration: none;
}

p.center {
  text-align: center;
}

.center {
  text-align: center;
}

.margin-top-10 {
  margin-top: 10px;
}

.margin-bottom-10 {
  margin-bottom: 10px;
}

.margin-tb-10 {
  margin-top: 10px;
  margin-bottom: 10px;
}

.img_help {
  cursor: help;
}

#loading {
  position: fixed;
  width: 200px;
  margin-left: 30%;
  text-align: center;
  top: 50%;
  background-color: #999999;
  padding: 20px;
}

.tactical_set legend {
  text-align: left;
  color: #3f3f3f;
}

.tactical_set {
  background: #fff;
  border: 1px solid #e2e2e2;
  margin-left: auto;
  margin-right: auto;
  width: auto;
}

/* --- Botones --- */
button.sub,
input.sub {
  font-weight: normal;
  -moz-border-radius: 2px;
  -webkit-border-radius: 2px;
  border-radius: 2px;
  font-size: 1.2em;
  background-color: #fff;
  background-repeat: no-repeat;
  background-position: 92% 10px;
  color: #000;
  padding-bottom: 10px;
  padding-top: 10px;
  padding-left: 15px;
  margin-left: 10px;
  border: 1px solid #888;
  font-family: "lato", "Open Sans", sans-serif;
  cursor: pointer;
}
/* ... */

